[package]
name = "node-testing"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test utilities for Substrate node."
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false }
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", features = [
    "test-helpers",
    "rocksdb",
] }
sc-client-db = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", features = [
    "rocksdb",
] }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
codec = { package = "parity-scale-codec", version = "3.0.0" }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
node-cli = { version = "2.0.0", path = "../cli" }
node-primitives = { version = "2.0.0", path = "../primitives" }
node-runtime = { version = "2.0.0", path = "../runtime" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-society = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-staking = { path = "../pallets/staking", version = "3.0.0" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-asset-tx-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }

pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34" }
pallet-deeper-node = { version = "3.0.0", path = "../pallets/deeper-node" }
log = "0.4.8"
tempfile = "3.1.0"
fs_extra = "1"
futures = "0.3.1"
hex-literal = "0.3.1"
