[package]
authors = ['deeper.network dev']
description = 'adsc pallet in deeper-chain.'
edition = '2021'
homepage = 'https://deeper.network'
name = 'pallet-adsc'
repository = 'https://github.com/deeper-chain/deeper-chain'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
 log = { workspace = true }
codec = { workspace = true, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { workspace = true, features = [
	"derive",
] }
frame-support = { workspace = true }
frame-system = {  workspace = true }
sp-core = {  workspace = true }
sp-io = {  workspace = true }
sp-runtime = { workspace = true }
sp-std = {  workspace = true }
node-primitives = { workspace = true }
pallet-uniques = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
pallet-timestamp = {  workspace = true }
pallet-user-privileges = {  workspace = true }
pallet-deeper-node = { workspace = true }

# Optional imports for benchmarking
frame-benchmarking = {  workspace = true, optional = true }

[dev-dependencies]
frame-benchmarking = { workspace = true, default-features = true }
pallet-balances = { workspace = true }
pallet-assets = {  workspace = true }


[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-core/std',
	'sp-std/std',
	'node-primitives/std',
	'pallet-balances/std',
	'pallet-timestamp/std',
	'pallet-uniques/std',
	'pallet-deeper-node/std',
	'pallet-assets/std',
	'pallet-user-privileges/std',
	'log/std',
	'serde',
]
runtime-benchmarks = ["frame-benchmarking"]
