[package]
authors = ['deeper.network dev']
edition = '2018'
name = 'pallet-eth-sub-bridge'
version = "3.0.0"
license = "Unlicense"
homepage = "https://deeper.network"
repository = "https://github.com/deeper-chain/deeper-chain"
description = "bridge to transfer DPR tokens between Ethereum and Deeper Chain"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16"}
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16"}
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16"}
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16"}
pallet-timestamp = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
pallet-balances = { version = "3.0.0", default-features = false, path = "../balances"}
node-primitives = {version = '2.0.0', default-features = false, path = "../../primitives" }
hex-literal = "0.3.1"
# Optional imports for benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", optional = true }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

[features]
default = ['std']
std = [
	'codec/std',
	"scale-info/std",
	'frame-support/std',
	'frame-system/std',
	'sp-core/std',
	'sp-io/std',
	'sp-std/std',
	'sp-runtime/std',
	'pallet-timestamp/std',
	'pallet-balances/std',
	'node-primitives/std',
	'serde',
]
runtime-benchmarks = [
	"frame-benchmarking",
]