[package]
authors = ['Deeper Network']
edition = '2018'
name = 'pallet-credit-accumulation'
version = "3.0.0"
homepage = "https://deeper.network"
repository = "https://github.com/deeper-chain/deeper-chain"
description = "pallet-credit-accumulation"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { default-features = false, version = "0.4.11" }
blake2-rfc = { version = "0.2.18", default-features = false }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
frame-system = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
pallet-timestamp = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
node-primitives = {version = '2.0.0', default-features = false, path = "../../primitives"}
pallet-balances = { version = "3.0.0", default-features = false, path = "../balances"}
pallet-credit = { default-features = false, path = "../credit", version = "3.0.0" }
pallet-deeper-node = { version = "3.0.0", default-features = false, path = "../deeper-node"}
pallet-micropayment = { version = "3.0.0", default-features = false, path = "../micropayment"}
sp-core = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-io = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
# Optional imports for benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", optional = true }
hex-literal = "0.3.1"

[dev-dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
serde = { version = "1.0.101" }

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'sp-io/std',
    'sp-runtime/std',
    'sp-core/std',
	'sp-std/std',
	'pallet-timestamp/std',
    'node-primitives/std',
	'pallet-balances/std',
	'pallet-credit/std',
	'pallet-deeper-node/std',
	'pallet-micropayment/std',
	'log/std',
]
runtime-benchmarks = [
	"frame-benchmarking",
]