[package]
authors = ['Deeper Network']
edition = '2021'
name = 'pallet-credit-accumulation'
version = "3.0.0"
homepage = "https://deeper.network"
repository = "https://github.com/deeper-chain/deeper-chain"
description = "pallet-credit-accumulation"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
blake2-rfc = { workspace = true }
codec = {workspace = true, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { workspace = true, features = [
	"derive",
] }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-timestamp = { workspace = true }
node-primitives = { workspace = true }
pallet-balances = { workspace = true }
pallet-uniques = { workspace = true }
pallet-micropayment = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
# Optional imports for benchmarking
frame-benchmarking = { workspace = true, optional = true }
hex-literal = { workspace = true }

[dev-dependencies]
frame-benchmarking = { workspace = true, default-features = true }
pallet-credit = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
sp-keystore = { workspace = true, default-features = true }
pallet-deeper-node = { workspace = true, default-features = true }

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-core/std',
	'sp-std/std',
	'pallet-timestamp/std',
	'node-primitives/std',
	'pallet-balances/std',
	'pallet-credit/std',
	'pallet-micropayment/std',
	'pallet-uniques/std',
	'log/std',
]
runtime-benchmarks = ["frame-benchmarking"]
