[package]
authors = ['deeper.network dev']
description = 'credit pallet for PoC in deeper-chain.'
edition = '2021'
homepage = 'https://deeper.network'
name = 'pallet-credit'
repository = 'https://github.com/deeper-chain/deeper-chain'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { default-features = false, version = "0.4.14" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.0.1", default-features = false, features = [
	"derive",
] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
node-primitives = { version = '2.0.0', default-features = false, path = "../../primitives" }
pallet-uniques = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
pallet-deeper-node = { version = "3.0.0", default-features = false, path = "../deeper-node" }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
pallet-treasury = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
pallet-user-privileges = { default-features = false, path = "../user-privileges" }

# Optional imports for benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", optional = true }

[dev-dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
pallet-treasury = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-core/std',
	'sp-std/std',
	'node-primitives/std',
	'pallet-balances/std',
	'pallet-uniques/std',
	'pallet-deeper-node/std',
	'pallet-timestamp/std',
	'pallet-treasury/std',
	'pallet-user-privileges/std',
	'log/std',
	'serde',
]
runtime-benchmarks = ["frame-benchmarking"]
