[package]
name = "pallet-deeper-node"
description = 'deeper node pallet'
edition = '2021'
authors = ["deeper dev"]
version = '3.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
node-primitives = { version = '2.0.0', default-features = false, path = "../../primitives" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
# Optional imports for benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", optional = true }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
pallet-credit-accumulation = { default-features = false, path = "../credit-accumulation", optional = true }
hex-literal = { version = "0.3.1", optional = true }

[dev-dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
pallet-credit-accumulation = { default-features = false, path = "../credit-accumulation" }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    "scale-info/std",
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-std/std',
    'pallet-balances/std',
    'node-primitives/std',
]
runtime-benchmarks = [
    "frame-benchmarking",
    "pallet-credit-accumulation",
    "hex-literal",
]
