[package]
name = "pallet-deeper-node"
description = 'deeper node pallet'
edition = '2021'
authors = ["deeper dev"]
version = '3.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { workspace = true, optional = true }
codec = { workspace = true, features = ["derive","max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
pallet-balances = { workspace = true }
node-primitives = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Optional imports for benchmarking
frame-benchmarking = { workspace = true, optional = true }
sp-core = { workspace = true }
pallet-credit-accumulation = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }

[dev-dependencies]
frame-benchmarking = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
pallet-credit-accumulation = { workspace = true, default-features = true }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    "scale-info/std",
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-std/std',
    'pallet-balances/std',
    'node-primitives/std',
]
runtime-benchmarks = [
    "frame-benchmarking",
    "pallet-credit-accumulation",
    "hex-literal",
]
