[package]
name = "pallet-deeper-node"
description = 'deeper node pallet'
edition = '2018'
authors = ["deeper dev"]
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0", default-features = false}
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0", default-features = false}

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
frame-support = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0", default-features = false}
frame-system = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0", default-features = false}
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0", default-features = false}
pallet-balances = { version = "3.0.0", default-features = false, path = "../balances" }
sp-io = { git = "https://github.com/paritytech/substrate", tag = "v3.0.0", default-features = false}

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-io/std',
    'pallet-balances/std',
]
